Update index.html 1
New update

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
       <title>fee cal</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <style>
         body{
           padding-left:15%;
