Update index.html 4

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <style>
         body{
           padding-left:15%;
-          padding-top:10%
+          padding-top:10%;
         }
         
         input, #res{
